# nourivex-runtime

./: .gitignore  AGENTS.md  GEMINI.md  README.md  gemini-extension.json  nourivex-runtime.skill  opencode-mcp.json  opencode-plugin.mjs  opencode.agents.json  package-lock.json  package.json  skill.json  vitest.config.ts
.agents/skills/nvx-agent-synchronizer/: SKILL.md
.agents/skills/nvx-anti-overengineering/: SKILL.md
.agents/skills/nvx-architectural-consistency/: SKILL.md
.agents/skills/nvx-goal-preservation/: SKILL.md
.agents/skills/nvx-planner/: SKILL.md
.agents/skills/nvx-reviewer/: SKILL.md
.agents/skills/nvx-session-manager/: SKILL.md
.agents/skills/nvx-superpower-memory/: SKILL.md
.agents/skills/nvx-tdd-enforcer/: SKILL.md
.agents/skills/nvx-verification/: SKILL.md
.agents/skills/nvx-watchdog/: SKILL.md
.nourivex/goals/: _active.json
.nourivex/memory/: _index.json
.nourivex/todos/: _active.json
.omo/run-continuation/: ses_1321cc88fffepDoA2ySdvhTPIV.json
.opencode/: README.md
.opencode/agents/: nvx-architect.md  nvx-implementer.md  nvx-planner.md  nvx-researcher.md  nvx-reviewer.md
adapters/claude/: CLAUDE.md
adapters/codex/: AGENTS.md
adapters/gemini/: GEMINI.md
adapters/opencode/: AGENTS.md
agents/: nvx-architect.md  nvx-implementer.md  nvx-planner.md  nvx-researcher.md  nvx-reviewer.md
cli/: package-lock.json  package.json
cli/src/: index.ts
docx-mcp/: README.md  pyproject.toml
docx-mcp/nourivex_docx/: __init__.py  __main__.py  cli.py  markdown.py  server.py
docx-mcp/nourivex_docx/document/: __init__.py  base.py  changesummary.py  compare.py  creation.py  footnotes.py  headers_footers.py  lists.py  litigation.py  pii.py  sessionlog.py  tables.py  tracks.py
docx-mcp/nourivex_docx/skill/: SKILL.md
docx-mcp/skill/: SKILL.md
lib/config/: manager.py
mcp/: .gitignore  package-lock.json  package.json
mcp/src/: gateway.ts  server.ts
skills/nourivex-runtime/: SKILL.md
skills/nvx-code-splitter/: SKILL.md
skills/nvx-context-pruning/: SKILL.md
skills/nvx-dependency-lockdown/: SKILL.md
skills/nvx-docx-editor/: SKILL.md
skills/nvx-goal-preservation/: SKILL.md
skills/nvx-idempotency-guard/: SKILL.md
skills/nvx-planner/: SKILL.md
skills/nvx-project-checklist/: SKILL.md
skills/nvx-reasoning-trace/: SKILL.md
skills/nvx-reviewer/: SKILL.md
skills/nvx-systematic-debugging/: SKILL.md
skills/nvx-tdd-enforcer/: SKILL.md
skills/nvx-token-efficiency/: SKILL.md
skills/nvx-watchdog/: SKILL.md
temp_skill/: SKILL.md
tests/: setup.ts  test_config_manager.py
tests/integration/: opencode-plugin.test.ts  session-lifecycle.test.ts
tests/unit/: goal-tracker.test.ts  init.test.ts  memory-engine.test.ts
(+33 files in other folders)
