[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nourivex-docx-server"
version = "0.1.0"
description = "Nourivex fork: MCP server for creating, reading, and editing Word (.docx) documents with markdown conversion, track changes, comments, footnotes, tables, images, sections, and structural validation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Nourivex" }, { name = "SecurityRonin" }]
keywords = ["mcp", "docx", "word", "track-changes", "comments", "footnotes", "ooxml", "nourivex"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup :: XML",
]
dependencies = [
    "mcp>=1.0.0",
    "lxml>=4.9.0",
    "mistune>=3.0",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.7,<4",
]

[project.optional-dependencies]
equations = ["latex2mathml>=3.0"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "pre-commit>=4.0",
    "hypothesis>=6.0",
]

[project.scripts]
nourivex-docx-server = "nourivex_docx.cli:main"

[project.urls]
Homepage = "https://github.com/Nourivex/nourivex-runtime"
Repository = "https://github.com/Nourivex/nourivex-runtime"
Issues = "https://github.com/Nourivex/nourivex-runtime/issues"

[tool.hatch.build.targets.wheel]
packages = ["nourivex_docx"]

# ── Ruff ────────────────────────────────────────────────────────────────────

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"nourivex_docx/document/creation.py" = ["E501"]  # inline XML templates
"nourivex_docx/document/clausediff.py" = ["E501"]  # long docstring lines
"nourivex_docx/server.py" = ["E501"]  # long docstring lines
"tests/conftest.py" = ["E501"]  # inline XML templates
"tests/test_tracks.py" = ["E501"]  # complex assertion expressions
"tests/test_creation.py" = ["E501"]  # complex assertion expressions
"tests/test_table_extensions.py" = ["E501"]  # inline XML templates

# ── Pytest ──────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]

# ── Coverage ────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["nourivex_docx"]
omit = ["nourivex_docx/__main__.py"]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__",
]
